--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,8 @@
 name=USBHost
+version=1.0
 author=Arduino
-email=info@arduino.cc
+maintainer=Arduino <info@arduino.cc>
 sentence=Allows an Arduino Due board to appear as a USB host
 paragraph=The USBHost library allows an Arduino Due board to appear as a USB host, enabling it to communicate with peripherals like USB mice and keyboards. USBHost does not support devices that are connected through USB hubs. This includes some keyboards that have an internal hub.
 url=http://arduino.cc/en/Reference/USBHost
 architectures=sam
-version=1.0
-dependencies=
-core-dependencies=arduino (>=1.5.0)
