--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.5
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
 sentence=Allows the communication with USB peripherals like mice, keyboards, and thumbdrives.
-paragraph=The USBHost library allows an Arduino Due, MKR1000 and Zero board to appear as a USB host, enabling it to communicate with peripherals like USB mice and keyboards. USBHost does not support devices that are connected through USB hubs. This includes some keyboards that have an internal hub.
+paragraph=The USBHost library allows an Arduino Due board to appear as a USB host, enabling it to communicate with peripherals like USB mice and keyboards. USBHost does not support devices that are connected through USB hubs. This includes some keyboards that have an internal hub.
 category=Device Control
 url=http://www.arduino.cc/en/Reference/USBHost
 architectures=sam
