--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,5 @@ sentence=Allows the communication with USB peripherals like mice, keyboards, and
 paragraph=The USBHost library allows an Arduino Due board to appear as a USB host, enabling it to communicate with peripherals like USB mice and keyboards. USBHost does not support devices that are connected through USB hubs. This includes some keyboards that have an internal hub.
 category=Device Control
 url=http://www.arduino.cc/en/Reference/USBHost
+url=https://www.arduino.cc/en/Tutorial/KeyboardLogout 
 architectures=sam
