--- a/.codespellrc
+++ b/.codespellrc
@@ -1,7 +1,7 @@
 # See: https://github.com/codespell-project/codespell#using-a-config-file
 [codespell]
 # In the event of a false positive, add the problematic word, in all lowercase, to a comma-separated list here:
-ignore-words-list = configued,secur,wan,sav,hist,tabl
+ignore-words-list = configued,interruptin,secur,wan,sav,hist,tabl
 check-filenames =
 check-hidden =
 skip = ./.git
